# Master-Coder-Protocol

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
analytics/: yield_regression.py
analytics/notebooks/: README.md
docs/: architecture.md  changelog.md  glossary.md  index.md
docs/templates/: architecture_template.md  commit_guidelines.md  experiment.md  model_card.md  readme_template.md  sop.md
experiments/: README.md
full-stack/: docker-compose.yml
ml/: requirements.txt  train_cnn.py
pipelines/: README.md  exp_data_dag.py
polymer-mcp/: .gitignore  Makefile  README.md  pyproject.toml
polymer-mcp/.github/workflows/: ci.yml
polymer-mcp/conf/ml/: tg_regressor.yaml
polymer-mcp/conf/rules/: physics.yaml
polymer-mcp/conf/schema/: mcp_polymers.schema.yaml
polymer-mcp/conf/sim/: md_tg.yaml
polymer-mcp/data/raw/: example_polymer.json
polymer-mcp/src/polymerlab/: __init__.py
polymer-mcp/src/polymerlab/cli/: app.py
polymer-mcp/src/polymerlab/eval/: report.py
polymer-mcp/src/polymerlab/featurize/: basic.py
polymer-mcp/src/polymerlab/inverse/: bo_stub.py
polymer-mcp/src/polymerlab/io/: loader.py  schema.py
polymer-mcp/src/polymerlab/logging/: logging_setup.py
polymer-mcp/src/polymerlab/models/: tg_regressor.py
polymer-mcp/src/polymerlab/physics/: rules.py
polymer-mcp/src/polymerlab/sim/: md_stub.py
polymer-mcp/src/polymerlab/uq/: conformal.py
polymer-mcp/tests/unit/: test_cli_smoke.py  test_validator.py
tools/: experiment_log.csv
(+32 files in other folders)
